--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "kafei",
+  "name": "AnToAnt",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -18,6 +18,7 @@
     "embla-carousel-react": "^8.6.0",
     "framer-motion": "^12.23.24",
     "gsap": "^3.13.0",
+    "js-cookie": "^3.0.5",
     "lucide-react": "^0.553.0",
     "mermaid": "^11.12.2",
     "next": "^16.0.5",
@@ -34,6 +35,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
+    "@types/js-cookie": "^3.0.6",
     "@types/node": "^24.6.0",
     "@types/react": "^19.1.16",
     "@types/react-dom": "^19.1.9",
